--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@shufo/prettier-plugin-blade": "^1.8.1",
         "@tailwindcss/forms": "^0.4.0",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
@@ -17,7 +18,7 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
-        "prettier": "2.8.0",
+        "prettier": "^2.8.0",
         "tailwindcss": "^3.0.18"
     }
 }
